--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -189,42 +189,23 @@
     <div class="TECHNICAL-SPECIFICATIONS">
         <div class="container1">
             <div class="row">
-                <div
+                <div class="col-12 d-flrx flex-wrap">
+                    <div
                     class="col-12 p-0 align-items-center TECHNICAL-SPECIFICATIONS-Result justify-content-between d-flex flex-wrap">
-                    <div class="TECHNICAL-SPECIFICATIONS-title">
+                    <div class="TECHNICAL-SPECIFICATIONS-title col-12 col-xl-2">
                         <h2 class="text-white ">
                             TECHNICAL <br class="d-none d-xl-block"> SPECIFICATIONS
                         </h2>
                     </div>
-                    <div class="swiper industrial_swiper m-0 col-12 industrial-border col-lg-8">
-                        <div class="swiper-wrapper col-12 m-0 ">
-                            <div class="swiper-slide col-4  industrial-border text-white">
-                                <h5 class="dynamic-data text-center industrial-border m-0" property-title></h5>
-                                <ul class="dynamic-data text-center list-none p-0 m-0" property-point>
-
-                                </ul>
-                            </div>
-                            <div class="swiper-slide industrial-border col-4 text-white">
-                                <h5 class="dynamic-data text-center  industrial-border m-0" method-title></h5>
-                                <ul class="dynamic-data  text-center list-none p-0 m-0" method-point>
-
-                                </ul>
-                            </div>
-                            <div class="swiper-slide col-4 industrial-border text-white">
-
-                                <h5 id="last_page" class="dynamic-data text-center industrial-border m-0 " result-title>
-                                </h5>
-
-                                <ul class="dynamic-data text-center list-none  p-0 m-0" result-point>
-
-                                </ul>
-                            </div>
-
+                    <div class="swiper industrial_swiper justify-content-center m-0 col-12 industrial-border col-xl-10">
+                        <div class="swiper-wrapper  col-12 justify-content-center m-0" id="industrial_tabal">
+                        
                         </div>
                         <br>
                         <br>
                         <div class="swiper-pagination"></div>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
@@ -303,8 +284,7 @@
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
-                            <div
-                                class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -337,7 +317,7 @@
                                         <span class="col-12 d-flex justify-content-between">
                                             <span class="m-0 footer-link-title">Quick Link</span>
                                             <span class="m-0 footer-link-icon "><i
-                                                class="fa-solid fa-angle-down mt-1 me-5"></i></span>
+                                                    class="fa-solid fa-angle-down mt-1 me-5"></i></span>
                                         </span>
 
                                     </button>
@@ -525,20 +505,23 @@
 
             } else {
 
-
             }
-
         }
         if (window.location.href == "https://ecomax.vercel.app/industrial/products/index.html?s=hydro-power-68-heavy-duty-hydraulic-oil") {
             document.getElementById("last_page").style.display = 'none';
 
         } else {
-
-
         }
 
     </script>
     <script>
+
+        if(window.location.href == "https://ecomaxlubricant.com/industrial/products/index?s=extreme-pressure-gear-lubricant"){
+
+        }else{
+            document.querySelector(".industrial_wh").style.cssText = "width: 300px !important;";
+        }
+
         var swiper = new Swiper(".industrial_swiper", {
             pagination: {
                 el: ".swiper-pagination",
@@ -548,11 +531,11 @@
                 // when window width is >= 320px
                 320: {
                     slidesPerView: 1,
-                    spaceBetween: 20
+                    spaceBetween: 0
                 },
                 // when window width is >= 640px
                 768: {
-                    slidesPerView: 3,
+                    slidesPerView: 11,
                     spaceBetween: 0
                 }
             }
@@ -603,30 +586,21 @@
                 }
 
                 const collectionData = await loadindustrialcollection(collectionType, collectionSlug);
-
-
                 $('.dynamic-data').each(function () {
-
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('data-title') !== undefined) {
-                            // replace the title
-                            $(this).html(collectionData.products[0].title);
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('data-description') !== undefined) {
-                            // replace the description
-                            $(this).html(collectionData.products[0].short_description);
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('data-image') !== undefined) {
-                            // replace the images
-                            $(this).html(
-                                `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].products_image}" class="img-fluid" alt="${collectionData.products[0].title}" />`
-                            );
-                        }
-                    });
+                    if ($(this).attr('data-title') !== undefined) {
+                        // replace the title
+                        $(this).html(collectionData.products[0].title);
+                    }
+                    if ($(this).attr('data-description') !== undefined) {
+                        // replace the description
+                        $(this).html(collectionData.products[0].short_description);
+                    }
+                    if ($(this).attr('data-image') !== undefined) {
+                        // replace the images
+                        $(this).html(
+                            `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].products_image}" class="img-fluid" alt="${collectionData.products[0].title}" />`
+                        );
+                    }
                     if ($(this).attr('product-overview') !== undefined) {
                         // replace the product-overview
                         $(this).append(collectionData.products[0].product_overview.map(function (overview) {
@@ -639,32 +613,24 @@
                             return "<li>" + features + "</li>";
                         }));
                     }
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('data-direction_image') !== undefined) {
-                            // replace the direction image
-                            $(this).html(
-                                `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].description_image}" class="img-fluid" alt="${collectionData.products[0].title}" />`
-                            );
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('direction-for-storage-and-use-title') !== undefined) {
-                            // replace the direction-for-storage-and-use-title
-                            $(this).html(collectionData.products[0].descriptions[0].title);
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('typical-applications-title') !== undefined) {
-                            // replace the typical-applications-title
-                            $(this).html(collectionData.products[0].descriptions[1].title);
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('pack-size-title') !== undefined) {
-                            // replace the direction-for-storage-and-use-title
-                            $(this).html(collectionData.products[0].descriptions[2].title);
-                        }
-                    });
+                    if ($(this).attr('data-direction_image') !== undefined) {
+                        // replace the direction image
+                        $(this).html(
+                            `<img src="/assets/images/collections/industrial/${collectionData.products[0].slug}/${collectionData.products[0].description_image}" class="img-fluid" alt="${collectionData.products[0].title}" />`
+                        );
+                    }
+                    if ($(this).attr('direction-for-storage-and-use-title') !== undefined) {
+                        // replace the direction-for-storage-and-use-title
+                        $(this).html(collectionData.products[0].descriptions[0].title);
+                    }
+                    if ($(this).attr('typical-applications-title') !== undefined) {
+                        // replace the typical-applications-title
+                        $(this).html(collectionData.products[0].descriptions[1].title);
+                    }
+                    if ($(this).attr('pack-size-title') !== undefined) {
+                        // replace the direction-for-storage-and-use-title
+                        $(this).html(collectionData.products[0].descriptions[2].title);
+                    }
                     if ($(this).attr('for-storage-and-use-point') !== undefined) {
                         // replace the product-overview
                         $(this).append(collectionData.products[0].descriptions[0].points.map(function (point) {
@@ -683,64 +649,33 @@
                             return "<p>" + point + "</p>";
                         }));
                     }
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('property-title') !== undefined) {
-                            // replace the direction-for-storage-and-use-title
-                            $(this).html(collectionData.products[0].technical_specifications[0].property);
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('method-title') !== undefined) {
-                            // replace the direction-for-storage-and-use-title
-                            $(this).html(collectionData.products[0].technical_specifications[1].test_method);
-                        }
-                    });
-                    $('.dynamic-data').each(function () {
-                        if ($(this).attr('result-title') !== undefined) {
-                            // replace the direction-for-storage-and-use-title
-                            $(this).html(collectionData.products[0].technical_specifications[2].result);
-                        }
-                    });
- 
-                    if ($(this).attr('property-point') !== undefined) {
-                        // replace the product-overview
-                        $(this).append(collectionData.products[0].technical_specifications[0].property_point.map(function (point) {
-                            return `<li class="p-1">${point}</li>`;
-                        }));
-                    }
-                    if ($(this).attr('method-point') !== undefined) {
-                        // replace the product-overview
-                        $(this).append(collectionData.products[0].technical_specifications[1].method_point.map(function (point) {
-                            return `<li class="p-1">${point}</li>`;
-                        }));
-                    }
-                    if ($(this).attr('result-point') !== undefined) {
-                        // replace the product-overview
-                        $(this).append(collectionData.products[0].technical_specifications[2].result_poinet.map(function (point) {
-                            return `<li class="p-1">${point}</li>`;
-                        }));
-                    }
-                    if ($(this).attr('result-point1') !== undefined) {
-                        // replace the product-overview
-                        $(this).append(collectionData.products[0].technical_specifications[2].result_poinet1.map(function (point) {
-                            return `<li class="p-1">${point}</li>`;
-                        }));
-                    }
-                    if ($(this).attr('result-point2') !== undefined) {
-                        // replace the product-overview
-                        $(this).append(collectionData.products[0].technical_specifications[2].result_poinet2.map(function (point) {
-                            return `<li class="p-1">${point}</li>`;
-                        }));
-                    }
-                    if ($(this).attr('result-point3') !== undefined) {
-                        // replace the product-overview
-                        $(this).append(collectionData.products[0].technical_specifications[2].result_poinet3.map(function (point) {
-                            return `<li class="p-1">${point}</li>`;
-                        }));
-                    }
+                    
+
                 });
+                // Set Technical Specifications
+                let technicalSpecificationsHTML = '';
+                let technicalSpecificationsArr = collectionData.products[0].technical_specifications;
+                if(technicalSpecificationsArr.length > 0) {
+                    for(let curIndex = 0; curIndex <= technicalSpecificationsArr.length; curIndex++) {
+                        if(typeof technicalSpecificationsArr[curIndex] !== "undefined") {
+
+                            technicalSpecificationsHTML += '<div class="swiper-slide industrial_white industrial-border text-white industrial_wh'+(technicalSpecificationsArr[curIndex].has_blank ? "has-blank" : "")+'"><h5 class="dynamic-data text-center industrial-border m-0" property-title>';
+                            technicalSpecificationsHTML += technicalSpecificationsArr[curIndex].property + '</h5>';
+                            technicalSpecificationsHTML += '<ul class="dynamic-data text-center list-none p-0 m-0">';
+                            // Add indivial property here
+                            let techPropertyArr = technicalSpecificationsArr[curIndex].property_point;
+                            for(let curNIndex = 0; curNIndex <= techPropertyArr.length; curNIndex++) {
+                                technicalSpecificationsHTML += '<li>' + techPropertyArr[curNIndex] + '</li>';
+                            }
+                            technicalSpecificationsHTML += '</ul></div>';
+                        }
+                    }
+                    $('#industrial_tabal').html(technicalSpecificationsHTML);
+                }
+                    console.log(technicalSpecificationsHTML);
             }, 500);
         });
+
 
     </script>
     <!-- Script end -->
